[tool.poetry]
name = "cli-calculator"
version = "0.1.0"
description = ""
authors = ["Asiya Khalitova <khasiya2507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
